# checkify

./: README.md  pyproject.toml
checkify/: main.py  utils.py
checkify/data/: questions.json
checkify/ocr/: ocr.py  ocr_utils.py
tests/: test_checkify.py
