[tool.poetry]
name = "checkify"
version = "0.1.0"
description = ""
authors = ["mzhadigerov <mzhadigerov@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fitz = "^0.0.1-alpha.2"
PyMuPDF = "^1.18.15"
opencv-contrib-python = "^4.5.3"
pdf2image = "^1.16.0"
pytesseract = "^0.3.8"
nltk = "^3.6.2"
pyenchant = "^3.2.1"
pytorch-pretrained-bert = "^0.6.2"
click = "^8.0.1"
pdfplumber = "^0.5.28"
tesseract = "^0.1.3"
yapf = "^0.31.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
